--- a/WebApplication1/Views/People/ShowSearchPage.cshtml
+++ b/WebApplication1/Views/People/ShowSearchPage.cshtml
@@ -1,4 +1,6 @@
-﻿<h4>Search for a Person</h4>
+﻿@model IEnumerable<WebApplication1.Models.Person>
+
+<h4>Search for a Person</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -13,6 +15,44 @@
         </form>
     </div>
 </div>
+
+<table class="table">
+    <thead>
+        <tr>
+            <th>
+                @Html.DisplayNameFor(model => model.Name)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Race)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Gender)
+            </th>
+            <th></th>
+        </tr>
+    </thead>
+    <tbody>
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Name)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Race)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Gender)
+                </td>
+                <td>
+                    <a asp-action="Edit" asp-route-id="@item.ID">Edit</a> |
+                    <a asp-action="Details" asp-route-id="@item.ID">Details</a> |
+                    <a asp-action="Delete" asp-route-id="@item.ID">Delete</a>
+                </td>
+            </tr>
+        }
+    </tbody>
+</table>
 
 <div>
     <a asp-action="Index">Back to List</a>
